--- a/spectrwm/.spectrwm.conf
+++ b/spectrwm/.spectrwm.conf
@@ -41,7 +41,7 @@
 # bar_font_color_selected	= black
 bar_font		= xos4 Terminus:pixelsize=14:antialias=true
 # bar_font_pua		= Typicons:pixelsize=14:antialias=true
-bar_action		= /home/jpnt/scripts/baraction.sh
+bar_action		= /home/$USER/scripts/baraction.sh
 # bar_action_expand	= 0
 # bar_justify		= left
 # bar_format		= +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
