--- a/spectrwm/.spectrwm.conf
+++ b/spectrwm/.spectrwm.conf
@@ -2,24 +2,24 @@
 # https://htmlpreview.github.io/?https://github.com/conformal/spectrwm/blob/master/spectrwm.html
 # NOTE: all rgb color values in this file are in hex! see XQueryColor for examples
 
-# workspace_limit	= 22
-# focus_mode		= default
-# focus_close		= previous
-# focus_close_wrap	= 1
-# focus_default		= last
-# spawn_position		= next
-# workspace_clamp	= 1
-# warp_focus		= 1
-# warp_pointer		= 1
+workspace_limit  = 10 
+focus_mode       = default
+focus_close      = previous
+focus_close_wrap = 1
+focus_default    = last
+spawn_position   = next
+workspace_clamp  = 1
+warp_focus       = 1
+warp_pointer     = 1
 
 # Window Decoration
-# border_width		= 1
-# color_focus		= red
-# color_focus_maximized	= yellow
+border_width     = 1 
+color_focus      = red
+# color_focus_maximized = yellow
 # color_unfocus		= rgb:88/88/88
 # color_unfocus_maximized	= rgb:88/88/00
-# region_padding	= 0
-# tile_gap		= 0
+region_padding   = 0
+tile_gap         = 0
 
 # Region containment
 # Distance window must be dragged/resized beyond the region edge before it is
@@ -30,7 +30,7 @@
 # disable_border		= 1
 
 # Bar Settings
-# bar_enabled		= 1
+bar_enabled      = 1
 # bar_enabled_ws[1]	= 1
 # bar_border_width	= 1
 # bar_border[1]		= rgb:00/80/80
@@ -41,7 +41,7 @@
 # bar_font_color_selected	= black
 bar_font		= xos4 Terminus:pixelsize=14:antialias=true
 # bar_font_pua		= Typicons:pixelsize=14:antialias=true
-bar_action		= /home/$USER/scripts/baraction.sh
+bar_action		= /home/jpnt/scripts/baraction.sh
 # bar_action_expand	= 0
 # bar_justify		= left
 # bar_format		= +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
