--- a/spectrwm/.spectrwm.conf
+++ b/spectrwm/.spectrwm.conf
@@ -41,9 +41,9 @@ bar_font_color[1]       = rgb:a0/a0/a0
 bar_font_color_selected	= black
 bar_font                = xos4 Terminus:pixelsize=14:antialias=true
 bar_font_pua            = Typicons:pixelsize=14:antialias=true
-bar_action              = /home/jpnt/scripts/baraction.sh
+bar_action              = ${HOME}/scripts/baraction.sh
 bar_action_expand       = 0
-bar_justify             = left
+bar_justify             = center 
 bar_format              = +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
 workspace_indicator     = listcurrent,listactive,markcurrent,printnames
 bar_at_bottom           = 1
@@ -79,9 +79,9 @@ urgent_collapse         = 0
 # layout		= ws[5]:0:0:0:0:horizontal_flip
 
 # Set workspace name at start
-# name			= ws[1]:IRC
+# name			= ws[1]:Shell
 # name			= ws[2]:Email
-# name			= ws[3]:Browse
+# name			= ws[3]:Browser
 # name			= ws[10]:Music
 
 # Mod key, (Windows key is Mod4) (Apple key on OSX is Mod2)
