--- a/spectrwm/.spectrwm.conf
+++ b/spectrwm/.spectrwm.conf
@@ -27,7 +27,7 @@ tile_gap                = 4
 # boundary_width 		= 50
 
 # Remove window border when bar is disabled and there is only one window in workspace
-# disable_border		= 1
+disable_border  		= 1
 
 # Bar Settings
 bar_enabled             = 1
@@ -60,7 +60,7 @@ urgent_enabled          = 1
 urgent_collapse         = 0
 
 # Dialog box size ratio when using TRANSSZ quirk; 0.3 < dialog_ratio <= 1.0
-# dialog_ratio		= 0.6
+# dialog_ratio  = 0.6
 
 # Split a non-RandR dual head setup into one region per monitor
 # (non-standard driver-based multihead is not seen by spectrwm)
@@ -79,10 +79,11 @@ urgent_collapse         = 0
 # layout		= ws[5]:0:0:0:0:horizontal_flip
 
 # Set workspace name at start
-# name			= ws[1]:Shell
-# name			= ws[2]:Email
-# name			= ws[3]:Browser
-# name			= ws[10]:Music
+# name			= ws[1]:Browser
+# name			= ws[2]:Terminal
+# name			= ws[3]:Work
+# name          = ws[4]:Email
+# name			= ws[5]:Music
 
 # Mod key, (Windows key is Mod4) (Apple key on OSX is Mod2)
 modkey = Mod4
@@ -110,7 +111,7 @@ program[term]		= urxvt
 # program[initscr]	= initscreen.sh			# optional
 
 # EXAMPLE: Define 'firefox' action and bind to key.
-# program[firefox]	= firefox http://spectrwm.org/
+# program[firefox]	= firefox   # http://spectrwm.org/
 # bind[firefox]		= MOD+Shift+b
 
 # QUIRKS
@@ -129,6 +130,7 @@ program[term]		= urxvt
 # quirk[Xitk:Xine Window]			= FLOAT + ANYWHERE
 # quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT
 # quirk[pcb:pcb]				= FLOAT
+
 # Key bindings for United States (us) keyboards
 # unbind with: bind[] = <keys>
 bind[bar_toggle]	= MOD+b
