--- a/spectrwm/.spectrwm.conf
+++ b/spectrwm/.spectrwm.conf
@@ -103,38 +103,38 @@ program[term]		= urxvt
 # To disable validation of the above, free the respective binding(s):
 # bind[]		= MOD+Shift+Delete	# disable lock
 # bind[]		= MOD+Shift+Return	# disable term
-# bind[]		= MOD+p			# disable menu
+# bind[]		= MOD+p		    	# disable menu
 
 # Optional default programs that will only be validated if you override:
 # program[screenshot_all]	= screenshot.sh full	# optional
 # program[screenshot_wind]	= screenshot.sh window	# optional
-# program[initscr]	= initscreen.sh			# optional
+# program[initscr]	= initscreen.sh			        # optional
 
 # EXAMPLE: Define 'firefox' action and bind to key.
-# program[firefox]	= firefox   # http://spectrwm.org/
+# program[firefox]	= firefox       # http://spectrwm.org/
 # bind[firefox]		= MOD+Shift+b
 
 # QUIRKS
 # Default quirks, remove with: quirk[class:name] = NONE
-# quirk[MPlayer:xv]			= FLOAT + FULLSCREEN + FOCUSPREV
+# quirk[MPlayer:xv]	            		= FLOAT + FULLSCREEN + FOCUSPREV
 # quirk[OpenOffice.org 2.4:VCLSalFrame]	= FLOAT
 # quirk[OpenOffice.org 3.0:VCLSalFrame]	= FLOAT
 # quirk[OpenOffice.org 3.1:VCLSalFrame]	= FLOAT
 # quirk[Firefox-bin:firefox-bin]		= TRANSSZ
-# quirk[Firefox:Dialog]			= FLOAT
-# quirk[Gimp:gimp]			= FLOAT + ANYWHERE
-# quirk[XTerm:xterm]			= XTERM_FONTADJ
-# quirk[xine:Xine Window]			= FLOAT + ANYWHERE
-# quirk[Xitk:Xitk Combo]			= FLOAT + ANYWHERE
-# quirk[xine:xine Panel]			= FLOAT + ANYWHERE
-# quirk[Xitk:Xine Window]			= FLOAT + ANYWHERE
+# quirk[Firefox:Dialog]		         	= FLOAT
+# quirk[Gimp:gimp]	        	    	= FLOAT + ANYWHERE
+# quirk[XTerm:xterm]		        	= XTERM_FONTADJ
+# quirk[xine:Xine Window]			    = FLOAT + ANYWHERE
+# quirk[Xitk:Xitk Combo]			    = FLOAT + ANYWHERE
+# quirk[xine:xine Panel]			    = FLOAT + ANYWHERE
+# quirk[Xitk:Xine Window]			    = FLOAT + ANYWHERE
 # quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT
-# quirk[pcb:pcb]				= FLOAT
+# quirk[pcb:pcb]				        = FLOAT
 
 # Key bindings for United States (us) keyboards
 # unbind with: bind[] = <keys>
 bind[bar_toggle]	= MOD+b
-bind[bar_toggle_ws]	= MOD+Shift+b
+#bind[bar_toggle_ws]= MOD+Shift+b
 bind[button2]		= MOD+v
 bind[cycle_layout]	= MOD+space
 bind[flip_layout]	= MOD+Shift+backslash
@@ -149,13 +149,13 @@ bind[height_grow]	= MOD+Shift+equal
 bind[height_shrink]	= MOD+Shift+minus
 bind[iconify]		= MOD+w
 bind[initscr]		= MOD+Shift+i
-bind[lock]		= MOD+Shift+Delete
+bind[lock]		    = MOD+Shift+Delete
 bind[master_add]	= MOD+comma
 bind[master_del]	= MOD+period
 bind[master_grow]	= MOD+l
 bind[master_shrink]	= MOD+h
 bind[maximize_toggle]	= MOD+e
-bind[menu]		= MOD+p
+bind[menu]	    	= MOD+p
 bind[move_down]		= MOD+Shift+bracketright
 bind[move_left]		= MOD+bracketleft
 bind[move_right]	= MOD+bracketright
@@ -192,23 +192,23 @@ bind[mvws_20]		= MOD+Shift+F10
 bind[mvws_21]		= MOD+Shift+F11
 bind[mvws_22]		= MOD+Shift+F12
 bind[name_workspace]	= MOD+Shift+slash
-bind[quit]		= MOD+Shift+q
+bind[quit]		    = MOD+Shift+q
 bind[raise_toggle]	= MOD+Shift+r
 bind[restart]		= MOD+q
-bind[rg_1]		= MOD+KP_End
-bind[rg_2]		= MOD+KP_Down
-bind[rg_3]		= MOD+KP_Next
-bind[rg_4]		= MOD+KP_Left
-bind[rg_5]		= MOD+KP_Begin
-bind[rg_6]		= MOD+KP_Right
-bind[rg_7]		= MOD+KP_Home
-bind[rg_8]		= MOD+KP_Up
-bind[rg_9]		= MOD+KP_Prior
+bind[rg_1]		    = MOD+KP_End
+bind[rg_2]		    = MOD+KP_Down
+bind[rg_3]		    = MOD+KP_Next
+bind[rg_4]		    = MOD+KP_Left
+bind[rg_5]		    = MOD+KP_Begin
+bind[rg_6]		    = MOD+KP_Right
+bind[rg_7]		    = MOD+KP_Home
+bind[rg_8]		    = MOD+KP_Up
+bind[rg_9]		    = MOD+KP_Prior
 bind[rg_next]		= MOD+Shift+Right
 bind[rg_prev]		= MOD+Shift+Left
 bind[screenshot_all]	= MOD+s
 bind[screenshot_wind]	= MOD+Shift+s
-bind[search_win]	= MOD+f
+bind[search_win]	    = MOD+f
 bind[search_workspace]	= MOD+slash
 bind[stack_dec]		= MOD+Shift+period
 bind[stack_inc]		= MOD+Shift+comma
@@ -216,35 +216,35 @@ bind[stack_reset]	= MOD+Shift+space
 bind[swap_main]		= MOD+Return
 bind[swap_next]		= MOD+Shift+j
 bind[swap_prev]		= MOD+Shift+k
-bind[term]		= MOD+Shift+Return
+bind[term]		    = MOD+Shift+Return
 bind[uniconify]		= MOD+Shift+w
 bind[version]		= MOD+Shift+v
 bind[width_grow]	= MOD+equal
 bind[width_shrink]	= MOD+minus
 bind[wind_del]		= MOD+x
 bind[wind_kill]		= MOD+Shift+x
-bind[ws_1]		= MOD+1
-bind[ws_2]		= MOD+2
-bind[ws_3]		= MOD+3
-bind[ws_4]		= MOD+4
-bind[ws_5]		= MOD+5
-bind[ws_6]		= MOD+6
-bind[ws_7]		= MOD+7
-bind[ws_8]		= MOD+8
-bind[ws_9]		= MOD+9
-bind[ws_10]		= MOD+0
-bind[ws_11]		= MOD+F1
-bind[ws_12]		= MOD+F2
-bind[ws_13]		= MOD+F3
-bind[ws_14]		= MOD+F4
-bind[ws_15]		= MOD+F5
-bind[ws_16]		= MOD+F6
-bind[ws_17]		= MOD+F7
-bind[ws_18]		= MOD+F8
-bind[ws_19]		= MOD+F9
-bind[ws_20]		= MOD+F10
-bind[ws_21]		= MOD+F11
-bind[ws_22]		= MOD+F12
+bind[ws_1]  		= MOD+1
+bind[ws_2]  		= MOD+2
+bind[ws_3]	    	= MOD+3
+bind[ws_4]		    = MOD+4
+bind[ws_5]		    = MOD+5
+bind[ws_6]	    	= MOD+6
+bind[ws_7]	    	= MOD+7
+bind[ws_8]	    	= MOD+8
+bind[ws_9]	    	= MOD+9
+bind[ws_10]	    	= MOD+0
+bind[ws_11]	    	= MOD+F1
+bind[ws_12]	    	= MOD+F2
+bind[ws_13]	    	= MOD+F3
+bind[ws_14]	    	= MOD+F4
+bind[ws_15]	    	= MOD+F5
+bind[ws_16]	    	= MOD+F6
+bind[ws_17]		    = MOD+F7
+bind[ws_18]		    = MOD+F8
+bind[ws_19]		    = MOD+F9
+bind[ws_20]		    = MOD+F10
+bind[ws_21]		    = MOD+F11
+bind[ws_22]		    = MOD+F12
 bind[ws_next]		= MOD+Right
 bind[ws_next_all]	= MOD+Up
 bind[ws_next_move]	= MOD+Shift+Up
