--- a/spectrwm/.spectrwm.conf
+++ b/spectrwm/.spectrwm.conf
@@ -79,11 +79,11 @@ urgent_collapse         = 0
 # layout		= ws[5]:0:0:0:0:horizontal_flip
 
 # Set workspace name at start
-# name			= ws[1]:Terminal
-# name			= ws[2]:Browser
-# name			= ws[3]:Work
-# name          = ws[4]:Email
-# name			= ws[5]:Music
+name			= ws[1]:Terminal
+name			= ws[2]:Browser
+name			= ws[3]:Work
+name      = ws[4]:Email
+name			= ws[5]:Music
 
 # Mod key, (Windows key is Mod4) (Apple key on OSX is Mod2)
 modkey = Mod4
