--- a/spectrwm/.spectrwm.conf
+++ b/spectrwm/.spectrwm.conf
@@ -44,11 +44,11 @@ bar_font_pua            = Typicons:pixelsize=14:antialias=true
 bar_action              = ~/scripts/baraction.sh
 bar_action_expand       = 0
 bar_justify             = center 
-bar_format              = +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
+bar_format              = +|L+1<[+I] <+D> +C +|R +A %a %b %d %R
 workspace_indicator     = listcurrent,listactive,markcurrent,printnames
 bar_at_bottom           = 1
 stack_enabled           = 1
-clock_enabled           = 1
+clock_enabled           = 0 
 clock_format            = %a %b %d %R %Z %Y
 iconic_enabled          = 0
 maximize_hide_bar       = 0
