--- a/spectrwm/.spectrwm.conf
+++ b/spectrwm/.spectrwm.conf
@@ -79,10 +79,10 @@ urgent_collapse         = 0
 # layout		= ws[5]:0:0:0:0:horizontal_flip
 
 # Set workspace name at start
-name			= ws[1]:Terminal
+name            = ws[1]:Terminal
 name			= ws[2]:Browser
 name			= ws[3]:Work
-name      = ws[4]:Email
+name            = ws[4]:Email
 name			= ws[5]:Music
 
 # Mod key, (Windows key is Mod4) (Apple key on OSX is Mod2)
@@ -95,7 +95,7 @@ modkey = Mod4
 
 # Validated default programs:
 program[lock]		= slock 
-program[term]		= urxvt 
+program[term]		= urxvtc 
 # program[menu]		= dmenu_run $dmenu_bottom -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
 # program[search]	= dmenu $dmenu_bottom -i -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
 # program[name_workspace]	= dmenu $dmenu_bottom -p Workspace -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
@@ -134,7 +134,7 @@ program[term]		= urxvt
 # Key bindings for United States (us) keyboards
 # unbind with: bind[] = <keys>
 bind[bar_toggle]	= MOD+b
-#bind[bar_toggle_ws]= MOD+Shift+b
+bind[bar_toggle_ws] = MOD+Shift+b
 bind[button2]		= MOD+v
 bind[cycle_layout]	= MOD+space
 bind[flip_layout]	= MOD+Shift+backslash
