--- a/spectrwm/.spectrwm.conf
+++ b/spectrwm/.spectrwm.conf
@@ -81,9 +81,9 @@ urgent_collapse		= 0
 # Set workspace name at start
 name			= ws[1]:Terminal
 name			= ws[2]:Browser
-name			= ws[3]:Work
-name			= ws[4]:Email
-name			= ws[5]:Music
+# name			= ws[3]:Work
+# name			= ws[4]:Email
+# name			= ws[5]:Music
 
 # Mod key, (Windows key is Mod4) (Apple key on OSX is Mod2)
 modkey			= Mod4
@@ -110,9 +110,12 @@ program[term]		= urxvtc
 # program[screenshot_wind]	= screenshot.sh window	# optional
 # program[initscr]	= initscreen.sh			        # optional
 
+program[screenshot_all]		= scrot -m
+program[screenshot_wind]	= scrot -s
+
 # EXAMPLE: Define 'firefox' action and bind to key.
-# program[firefox]	= firefox       # http://spectrwm.org/
-# bind[firefox]		= MOD+Shift+b
+program[firefox]	= firefox       # http://spectrwm.org/
+bind[firefox]		= MOD+Shift+f
 
 # QUIRKS
 # Default quirks, remove with: quirk[class:name] = NONE
