--- a/spectrwm/.spectrwm.conf
+++ b/spectrwm/.spectrwm.conf
@@ -95,7 +95,7 @@ modkey			= Mod4
 
 # Validated default programs:
 program[lock]		= slock 
-program[term]		= urxvtc 
+program[term]		= urxvtc
 # program[menu]		= dmenu_run $dmenu_bottom -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
 # program[search]	= dmenu $dmenu_bottom -i -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
 # program[name_workspace]	= dmenu $dmenu_bottom -p Workspace -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
@@ -133,6 +133,7 @@ bind[firefox]		= MOD+Shift+f
 # quirk[Xitk:Xine Window]		= FLOAT + ANYWHERE
 # quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT
 # quirk[pcb:pcb]			= FLOAT
+quirk[Xmessage:xmessage]	=	FLOAT
 
 # Key bindings for United States (us) keyboards
 # unbind with: bind[] = <keys>
