--- a/spectrwm/.config/spectrwm/.spectrwm.conf
+++ b/spectrwm/.config/spectrwm/.spectrwm.conf
@@ -41,7 +41,7 @@ bar_font_color[1]	= rgb:a0/a0/a0
 bar_font_color_selected	= black
 bar_font		= xos4 Terminus:pixelsize=14:antialias=true
 bar_font_pua		= Typicons:pixelsize=14:antialias=true
-bar_action		= ~/scripts/baraction.sh
+bar_action		= ~/.config/spectrwm/baraction.sh
 bar_action_expand	= 0
 bar_justify		= center 
 bar_format		= +|L+1<[+I] <+D> +C +|R +A %a %b %d %R
@@ -95,7 +95,7 @@ modkey			= Mod4
 
 # Validated default programs:
 program[lock]		= slock 
-program[term]		= urxvtc
+program[term]		= st
 # program[menu]		= dmenu_run $dmenu_bottom -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
 # program[search]	= dmenu $dmenu_bottom -i -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
 # program[name_workspace]	= dmenu $dmenu_bottom -p Workspace -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
@@ -113,9 +113,8 @@ program[term]		= urxvtc
 program[screenshot_all]		= scrot -m
 program[screenshot_wind]	= scrot -s
 
-# EXAMPLE: Define 'firefox' action and bind to key.
-program[firefox]	= firefox       # http://spectrwm.org/
-bind[firefox]		= MOD+Shift+f
+program[browser]		= vivaldi-stable
+bind[browser]			= MOD+Shift+f
 
 # QUIRKS
 # Default quirks, remove with: quirk[class:name] = NONE
@@ -133,7 +132,7 @@ bind[firefox]		= MOD+Shift+f
 # quirk[Xitk:Xine Window]		= FLOAT + ANYWHERE
 # quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT
 # quirk[pcb:pcb]			= FLOAT
-quirk[Xmessage:xmessage]	=	FLOAT
+quirk[Xmessage:xmessage]		= FLOAT
 
 # Key bindings for United States (us) keyboards
 # unbind with: bind[] = <keys>
