--- a/spectrwm/.config/spectrwm/spectrwm.conf
+++ b/spectrwm/.config/spectrwm/spectrwm.conf
@@ -41,10 +41,11 @@ bar_font_color[1]	= rgb:a0/a0/a0
 bar_font_color_selected	= black
 bar_font		= xos4 Terminus:pixelsize=14:antialias=true
 bar_font_pua		= Typicons:pixelsize=14:antialias=true
-bar_action		= ~/.config/spectrwm/baraction.sh
-bar_action_expand	= 0
+bar_action		= ~/.config/spectrwm/slstatus.sh
+bar_action_expand	= 1
 bar_justify		= center 
-bar_format		= +|L+1<[+I] <+D> +C +|R +A %a %b %d %R
+#bar_format		= +|L+1<[+I] <+D> +C +|R +A
+bar_format		= +|L+L+<+S+<+W+|R+A
 workspace_indicator	= listcurrent,listactive,markcurrent,printnames
 bar_at_bottom		= 1
 stack_enabled		= 1
@@ -79,8 +80,8 @@ urgent_collapse		= 0
 # layout		= ws[5]:0:0:0:0:horizontal_flip
 
 # Set workspace name at start
-name			= ws[1]:Terminal
-name			= ws[2]:Browser
+# name			= ws[1]:Terminal
+# name			= ws[2]:Browser
 # name			= ws[3]:Work
 # name			= ws[4]:Email
 # name			= ws[5]:Music
@@ -113,7 +114,7 @@ program[term]		= st
 program[screenshot_all]		= scrot -m
 program[screenshot_wind]	= scrot -s
 
-program[browser]		= vivaldi-stable
+program[browser]		= floorp
 bind[browser]			= MOD+Shift+f
 
 # QUIRKS
