--- a/spectrwm/.config/spectrwm/spectrwm.conf
+++ b/spectrwm/.config/spectrwm/spectrwm.conf
@@ -39,7 +39,8 @@ bar_color[1]		= black
 bar_color_selected[1]	= rgb:00/80/80
 bar_font_color[1]	= rgb:a0/a0/a0
 bar_font_color_selected	= black
-bar_font		= xos4 Terminus:pixelsize=14:antialias=true
+#bar_font		= xos4 Terminus:pixelsize=14:antialias=true
+bar_font		= Terminus
 bar_font_pua		= Typicons:pixelsize=14:antialias=true
 bar_action		= ~/.config/spectrwm/slstatus.sh
 bar_action_expand	= 1
@@ -78,6 +79,10 @@ urgent_collapse		= 0
 # layout		= ws[3]:0:0:0:0:fullscreen
 # layout		= ws[4]:4:0:0:0:vertical_flip
 # layout		= ws[5]:0:0:0:0:horizontal_flip
+layout			= ws[11]:-3:0:1:0:horizontal
+layout			= ws[12]:-3:0:1:0:horizontal
+layout			= ws[13]:-3:0:1:0:horizontal
+layout			= ws[14]:-3:0:1:0:horizontal
 
 # Set workspace name at start
 # name			= ws[1]:Terminal
@@ -114,8 +119,11 @@ program[term]		= st
 program[screenshot_all]		= scrot -m
 program[screenshot_wind]	= scrot -s
 
-program[browser]		= floorp
-bind[browser]			= MOD+Shift+f
+# program[browser]		= floorp
+# bind[browser]			= MOD+Shift+f
+
+program[appmenu]		= ~/Scripts/appmenu.sh
+bind[appmenu]			= MOD+Shift+f
 
 # QUIRKS
 # Default quirks, remove with: quirk[class:name] = NONE
@@ -134,6 +142,7 @@ bind[browser]			= MOD+Shift+f
 # quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT
 # quirk[pcb:pcb]			= FLOAT
 quirk[Xmessage:xmessage]		= FLOAT
+quirk[Nitrogen:nitrogen]		= FLOAT
 
 # Key bindings for United States (us) keyboards
 # unbind with: bind[] = <keys>
