--- a/spectrwm/.config/spectrwm/spectrwm.conf
+++ b/spectrwm/.config/spectrwm/spectrwm.conf
@@ -119,11 +119,11 @@ program[term]		= st
 program[screenshot_all]		= scrot -m
 program[screenshot_wind]	= scrot -s
 
-# program[browser]		= floorp
-# bind[browser]			= MOD+Shift+f
+program[browser]		= floorp
+bind[browser]			= MOD+Shift+f
 
 program[appmenu]		= ~/Scripts/appmenu.sh
-bind[appmenu]			= MOD+Shift+f
+bind[appmenu]			= MOD+Shift+p
 
 # QUIRKS
 # Default quirks, remove with: quirk[class:name] = NONE
