--- a/pulseaudio/.config/pulse/daemon.conf
+++ b/pulseaudio/.config/pulse/daemon.conf
@@ -1,11 +1,13 @@
+daemonize = no
+allow-module-loading = no
+resample-method = soxr-vhq
 default-sample-format = float32le
 default-sample-rate = 48000
 alternate-sample-rate = 44100
 default-sample-channels = 2
 default-channel-map = front-left,front-right
-default-fragments = 2
-default-fragment-size-msec = 125
-resample-method = soxr-vhq
+default-fragments = 4
+default-fragment-size-msec = 25
 remixing-produce-lfe = no
 remixing-consume-lfe = no
 high-priority = yes
@@ -13,4 +15,3 @@ nice-level = -11
 realtime-scheduling = yes
 realtime-priority = 9
 rlimit-rtprio = 9
-daemonize = no
