update scripts location

--- a/spectrwm/.config/spectrwm/spectrwm.conf
+++ b/spectrwm/.config/spectrwm/spectrwm.conf
@@ -119,10 +119,10 @@ program[term]		= st
 program[screenshot_all]		= scrot -m
 program[screenshot_wind]	= scrot -s
 
-program[browser]		= floorp
+program[browser]		= vivaldi-stable
 bind[browser]			= MOD+Shift+f
 
-program[appmenu]		= ~/Scripts/appmenu.sh
+program[appmenu]		= quickmenu.sh
 bind[appmenu]			= MOD+Shift+p
 
 # QUIRKS
