--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -1,17 +1,13 @@
-theme = "modus_vivendi_tritanopia"
+theme = "autumn_night"
 
 [editor]
 line-number = "relative"
 bufferline = "multiple"
-gutters = ["diff", "line-numbers", "spacer", "diagnostics"]
 
 [editor.cursor-shape]
 insert = "bar"
 normal = "block"
 select = "underline"
-
-[editor.indent-guides]
-render = true
 
 [editor.lsp]
 auto-signature-help = false
@@ -21,11 +17,10 @@ display-inlay-hints = true
 [keys.normal]
 D = ["ensure_selections_forward", "extend_to_line_end", "delete_selection"]
 esc = ["collapse_selection", "keep_primary_selection"]
-C-g = [":new", ":insert-output gitui", ":buffer-close!", ":redraw"]
 F1 = [":open ."]
 L = ":buffer-next"
 H = ":buffer-previous"
-K = "hover" # LSP doc
+G = "goto_last_line"
+K = "hover"
 "ret" = ["open_below", "normal_mode"]
 "C-space" = "expand_selection"
-G = "goto_last_line"
