update helix config

--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -18,9 +18,9 @@ display-inlay-hints = true
 D = ["ensure_selections_forward", "extend_to_line_end", "delete_selection"]
 esc = ["collapse_selection", "keep_primary_selection"]
 F1 = [":open ."]
-L = ":buffer-next"
-H = ":buffer-previous"
+tab = ":buffer-next"
+S-tab = ":buffer-previous"
 G = "goto_last_line"
 K = "hover"
-"ret" = ["open_below", "normal_mode"]
-"C-space" = "expand_selection"
+ret = ["open_below", "normal_mode"]
+C-space = "expand_selection"
