--- a/spectrwm/.config/spectrwm/spectrwm.conf
+++ b/spectrwm/.config/spectrwm/spectrwm.conf
@@ -119,7 +119,7 @@ program[term]		= st
 program[screenshot_all]		= scrot -m
 program[screenshot_wind]	= scrot -s
 
-program[browser]		= vivaldi-stable
+program[browser]		= chromium
 bind[browser]			= MOD+Shift+f
 
 program[appmenu]		= quickmenu.sh
