update foot and tofi config

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,6 +1,6 @@
 [main]
 font=CaskaydiaMonoNerdFontMono:size=14
-workers=0 # no multithreading
+# workers=0 # no multithreading
 
 [colors]
 background=000000
