--- a/tofi/.config/tofi/config
+++ b/tofi/.config/tofi/config
@@ -4,6 +4,8 @@ height=21
 horizontal=true
 font-size=12
 prompt-text=" run: "
+ascii-input=true
+hint-font=false
 font=/usr/share/fonts/DejaVuSansMono.ttf
 outline-width=0
 border-width=0
