--- a/kanshi/.config/kanshi/config
+++ b/kanshi/.config/kanshi/config
@@ -1,4 +1,18 @@
 profile laptop {
-    output "*" mode 2560x1600@165Hz scale 1.5 adaptive_sync on
+    output "eDP-1" mode 2560x1600@165Hz scale 1.5 adaptive_sync on
+}
+
+profile desktop {
+    output "Ancor Communications Inc VG248 H9LMQS005850" {
+        mode 1920x1080@144Hz
+        position 1080,420
+        adaptive_sync off
+    }
+    output "Samsung Electric Company S24C31x H4CW901201X" {
+        mode 1920x1080@60Hz
+        transform 90
+        position 0,0
+        adaptive_sync off
+    }
 }
 
