--- a/brave/.config/brave-flags.conf
+++ b/brave/.config/brave-flags.conf
@@ -1,6 +1,3 @@
---enable-features=UseOzonePlatform
+--enable-features=UseOzonePlatform,WebRTCPipeWireCapturer,WaylandWindowDecorations
 --ozone-platform=wayland
---enable-features=WebRTCPipeWireCapturer
---enable-features=WaylandWindowDecorations
 --disable-features=WaylandFractionalScaleV1
-
