update rio config
it doesnt like the other font too well

--- a/rio/.config/rio/config.toml
+++ b/rio/.config/rio/config.toml
@@ -5,7 +5,7 @@ use-fork = true
 
 [fonts]
 size = 18
-family = "CaskaydiaCove Nerd Font Mono"
+family = "cascadiacode"
 
 [colors]
 background = '#000000'
