fuzzel: update colors

--- a/fuzzel/.config/fuzzel/fuzzel.ini
+++ b/fuzzel/.config/fuzzel/fuzzel.ini
@@ -1,1 +1,10 @@
 font=0xProto Nerd Font Mono:size=12
+
+[colors]
+background=181818ff
+selection=2a2a2aff
+selection-text=ece1caff
+border=909090ff
+
+[border]
+radius=4
